Removing to restore CodeQL?